fixes #2366 - User menu dropdown icons not always visible

--- a/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/organization/wfp/organization-wfp.css
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/organization/wfp/organization-wfp.css
@@ -428,6 +428,10 @@ body {
   line-height: 25px;
   color: #eeeeee;
 }
+.newHeader .header-user-box i,
+.newHeader .header-user-box > span > a i {
+  display: none;
+}
 .newHeader .header-user-name {
   color: #f2645a;
 }
